# mcp-weather

./: .gitignore  Dockerfile  INSTALL_AS_DEPENDENCY.md  QUICKSTART.md  README.md  pyproject.toml  run-server.sh  setup-dev.sh  test-mcp.sh  test-rest-api.sh
.github/workflows/: docker-publish.yml
core/: README.md  __init__.py  auth.py  auth_mcp.py  auth_provider.py  auth_rest.py  authentik_client.py  cache.py  config.py  server.py
core/utils/: __init__.py  docstring_injector.py  load_instructions.py
docs/: DEPENDENCY_USAGE_SUMMARY.md  QUICKSTART_AS_DEPENDENCY.md  QUICK_REFERENCE.md  README.md  USING_AS_DEPENDENCY.md
examples/: README.md
examples/kubernetes/: README.md  cleanup-weather-mcp-mcp.yml  cleanup-weather-mcp-only.yml  cleanup-weather-mcp-rest.yml  cleanup-weather-mcp.yml  deploy-weather-mcp-only.yml  deploy-weather-mcp.yml  weather-mcp-mcp.yml  weather-mcp-rest.yml
examples/kubernetes/manifests/: 01-namespace.yaml  02-deployment.yaml  03-services.yaml  04-gateway.yaml  README.md
examples/kubernetes/manifests/mcp-dynamic/: 01-namespace.yaml  02-deployment.yaml  03-service.yaml  04-gateway.yaml  README.md
examples/kubernetes/manifests/rest-api/: 02-deployment.yaml  03-service.yaml  04-gateway.yaml  README.md
examples/translation-server/: FEATURES_PATTERN.md  README.md  pyproject.toml
examples/translation-server/mcp_translation/: __init__.py  config.py  server.py  service.py  translation_service.py
examples/translation-server/mcp_translation/features/: __init__.py
examples/translation-server/mcp_translation/features/detect_language/: __init__.py  models.py  routes.py  tool.py
examples/translation-server/mcp_translation/features/supported_languages/: __init__.py  models.py  routes.py  tool.py
examples/translation-server/mcp_translation/features/translate/: __init__.py  models.py  routes.py  tool.py
examples/translation-server/mcp_translation/shared/: __init__.py  models.py
mcp_weather/: README.md  __init__.py  auth_provider.py  cache.py  config.py  geocoding_service.py  models.py  routes.py  server.py  tools.py  weather.py  weather_service.py
mcp_weather/features/: README.md  __init__.py
mcp_weather/features/geocoding/: __init__.py  instructions.md  models.py  routes.py  tool.py
mcp_weather/features/hourly_weather/: __init__.py  instructions.md  models.py  routes.py  tool.py
mcp_weather/shared/: README.md  __init__.py  models.py
specs/: weather-service.json
tools/: authentik_client.py  authentik_main.py  authentik_manager.py  main.py  test_mcp_client.py  test_weather_mcp_client.py  test_weather_rest_client.py
