[project]
name = "mcp-weather"
version = "0.2.0"
description = "Weather forecast tool for MCP with reusable core infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Geovanny F. Fajardo", email = "gffajardo@gmail.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "weather",
    "fastmcp",
    "ai-tools",
    "github-copilot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "flatdict>=4.0.0",
    "aiohttp>=3.9.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "fastmcp>=2.0.0",
    "aiocache>=0.12.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
# Optional dependencies for development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

# Optional dependencies if only using the core infrastructure
core-only = [
    "python-dotenv>=1.0.0",
    "flatdict>=4.0.0",
    "aiohttp>=3.9.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "fastmcp>=2.0.0",
    "aiocache>=0.12.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/geosp/mcp-weather"
Repository = "https://github.com/geosp/mcp-weather"
Documentation = "https://github.com/geosp/mcp-weather/blob/main/README.md"

[project.scripts]
mcp-weather = "mcp_weather.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["core", "mcp_weather"]
